# trace_storage

./: .gitignore  1alibaba.txt  3duration.txt  3fanout.txt  3height.txt  3one_call.txt  BUILD.bazel  CPPLINT.cfg  README.md  WORKSPACE.bazel  common.cc  common.h  first_15_for_145.txt  folders_index_query.cc  folders_index_query.h  folders_index_query_main.cc  get_traces_by_structure.cc  get_traces_by_structure.h  graph_query.cc  graph_query.h  graph_query_main.cc  graph_query_main2.cc  id_index.cc  id_query_main.cc  id_query_main2.cc  id_query_main_alt.cc  query_bloom_index.cc  query_bloom_index.h  query_bloom_index_test.cc  query_conditions.cc  query_conditions.h  rest_of_145.txt  run.sh  test_trace_storage.cc  trace_storage.cc  trace_storage.h
.github/workflows/: cppcheck.yml  cpplint.yml
analyze_results/: analyze.sh  bytes_count.csv  plot_graph.py  process_results.py  processed.csv  traces_count.csv
batched_index/: 10duration.txt  10fanout.txt  10height.txt  10one_call.txt  15duration.txt  15fanout.txt  15height.txt  15one_call.txt  5duration.txt  5fanout.txt  5height.txt  5one_call.txt
batched_index_all/: 100duration.txt  100fanout.txt  100height.txt  100one_call.txt  105duration.txt  105fanout.txt  105height.txt  105one_call.txt  10duration.txt  10fanout.txt  10height.txt  10one_call.txt  110duration.txt  110fanout.txt  110height.txt  110one_call.txt  115duration.txt  115fanout.txt  115height.txt  115one_call.txt  120duration.txt  120fanout.txt  120height.txt  120one_call.txt  125duration.txt  125fanout.txt  125height.txt  125one_call.txt  130duration.txt  130fanout.txt  130height.txt  130one_call.txt  135duration.txt  135fanout.txt  135height.txt  135one_call.txt  140duration.txt  140fanout.txt  140height.txt  140one_call.txt  (+76 more)
batched_index_seventy/: 10duration.txt  10fanout.txt  10height.txt  10one_call.txt  15duration.txt  15fanout.txt  15height.txt  15one_call.txt  20duration.txt  20fanout.txt  20height.txt  20one_call.txt  25duration.txt  25fanout.txt  25height.txt  25one_call.txt  30duration.txt  30fanout.txt  30height.txt  30one_call.txt  35duration.txt  35fanout.txt  35height.txt  35one_call.txt  40duration.txt  40fanout.txt  40height.txt  40one_call.txt  45duration.txt  45fanout.txt  45height.txt  45one_call.txt  50duration.txt  50fanout.txt  50height.txt  50one_call.txt  55duration.txt  55fanout.txt  55height.txt  55one_call.txt  (+16 more)
batched_index_thirty/: 10duration.txt  10fanout.txt  10height.txt  10one_call.txt  15duration.txt  15fanout.txt  15height.txt  15one_call.txt  20duration.txt  20fanout.txt  20height.txt  20one_call.txt  25duration.txt  25fanout.txt  25height.txt  25one_call.txt  30duration.txt  30fanout.txt  30height.txt  30one_call.txt  5duration.txt  5fanout.txt  5height.txt  5one_call.txt
count/: count_objects.cc  count_objects.h  count_traces.cc  count_traces.h  main.cc
count_objects/: count.cc  count.h  main.cc
count_size/: count.cc  count.h  main.cc
count_traces/: count.cc  count.h  main.cc
folders_index/: folders_index.cc  folders_index.h  main.cc  trace_attributes.cc  trace_attributes.h
folders_index/status_code/: status_code_index.cc  status_code_index.h  trace_attributes.cc  trace_attributes.h
id_index/: .id_index_test.cc.swp  BUILD.bazel  bloom_filter.hpp  id_index.cc  id_index.h  id_index_test.cc  main.cc
indices/: folders_index_query.cc  folders_index_query.h  folders_index_query_main.cc  query_bloom_index.cc  query_bloom_index.h  query_range_index.cc  query_range_index.h  range_index_query_main.cc
indices/make_folders_index/: folders_index.cc  main.cc  trace_attributes.cc
indices/make_range_index/: main.cc  nodes.cc  nodes.h  nodes_test.cc  range_index.cc  range_index.h  range_index_test.cc
indices/make_sequence_bloom_tree/: bloom_filter.hpp  id_index.cc  id_index.h  id_index_test.cc  main.cc
isomorphism_examples/: graph_example.cc  graph_example_complex.cc
results/: 10duration.txt  10fanout.txt  10height.txt  10one_call.txt  11duration.txt  11fanout.txt  11height.txt  11one_call.txt  12duration.txt  12fanout.txt  12height.txt  12one_call.txt  13duration.txt  13fanout.txt  13height.txt  13one_call.txt  14duration.txt  14fanout.txt  14height.txt  14one_call.txt  15duration.txt  15fanout.txt  1duration.txt  1fanout.txt  1height.txt  1one_call.txt  2duration.txt  2fanout.txt  2height.txt  2one_call.txt  3duration.txt  3fanout.txt  3height.txt  3one_call.txt  4duration.txt  4fanout.txt  4height.txt  4one_call.txt  5duration.txt  5fanout.txt  (+19 more)
